確認画面の実装

--- a/src/main/resources/templates/cardOrder/job.html
+++ b/src/main/resources/templates/cardOrder/job.html
@@ -17,7 +17,10 @@
                     <div class="ui segment metrixir">
                         <h1 class="ui aligned header teal">お申込み情報</h1>
 
+                        <!--
                         <form class="ui form" method="post" action="/cardOrder/">
+                            -->
+                        <form class="ui form" method="post" action="/cardOrder/conf">
 
                             <!-- /*エラーがあれば表示する*/ -->
                             <ul class="ui red basic label" th:if="${form.hasErrors()}">
