確認画面の実装(再)

--- a/src/main/resources/templates/cardOrder/conf.html
+++ b/src/main/resources/templates/cardOrder/conf.html
@@ -16,21 +16,92 @@
                 <div class="center column">
                     <div class="ui segment metrixir">
                         <h1 class="ui aligned header teal">確認画面</h1>
-                            <form class="ui form" method="post" action="/cardOrder">
 
-                                <p th:text="#{home.welcome}">Welcome to our grocery store!</p>
-                                <p>Today is: <span th:text="${today}">13 february 2011</span>.</p>
-                                <p>Today is: <span th:text="${#calendars.format(today,'dd MMMM yyyy')}">13 May 2011</span></p>
+                        <!--
+                            <form class="ui form" method="post" action="/cardOrder/conpleted/">
+                            -->
 
 
+                        <form class="ui form" method="post" action="/cardOrder/">
+
+
+                            <div class="ui horizontal divider">ご本人について</div>
+                            <label class="label2">お名前（漢字）</label>
+                            <p th:text="${form.kanjiName_L} + '' + ${form.kanjiName_F}"></p>
+                            <label class="label2">お名前(カナ）</label>
+                            <p th:text="${form.kanaName_L} + '' + ${form.kanaName_F}"></p>
+                            <label class="label2">お名前（ローマ字）</label>
+                            <p th:text="${form.alphabetName_L} + '' + ${form.alphabetName_F}"></p>
+
+                            <label class="label2">性別</label>
+                            <p th:text="(${form.gender}==male) ? ('男') : ('女')"></p>
+                            <label class="label2">生年月日</label>
+                            <p th:text="${form.dateOfBirth}"></p>
+
+                            <label class="label2">郵便番号</label>
+                            <p th:text="${form.zipCode}"></p>
+                            <label class="label2">ご住所</label>
+                            <p th:text="${form.address}"></p>
+
+                            <label class="label2">自宅電話番号</label>
+                            <p th:text="${form.homePhoneNumber_1} + '-' + ${form.homePhoneNumber_2} + '-' + ${form.homePhoneNumber_3}"></p>
+                            <label class="label2">携帯電話番号</label>
+                            <p th:text="${form.mobilePhoneNumber_1} + '-' + ${form.mobilePhoneNumber_2} + '-' + ${form.mobilePhoneNumber_3}"></p>
+
+                            <label class="label2">メールアドレス</label>
+                            <p th:text="${form.emailAddress} +'@' + ${form.emailAddress2}"></p>
+                            <label class="label2">配偶者有無</label>
+                            <p th:text="(${form.spouse}==0) ? ('無') : ('有')"></p>
+                            <label class="label2">お住まい</label>
+                            <p th:text="${form.houseClassification}"></p>
+                            <label class="label2">ローンの借り入れ金額</label>
+                            <p th:text="${form.debt} + '万円'"></p>
+                            <label class="label2">昨年の所得</label>
+                            <p th:text="${form.income} + '万円'"></p>
+                            <label class="label2">ご職業</label>
+                            <p th:text="${form.job}"></p>
+
+                            <br>
+                            <div class="ui horizontal divider">お勤め先について</div>
+
+
+                            <label class="label2">お勤め先名</label>
+                            <p th:text="${form.employerName}"></p>
+
+                            <label class="label2">お勤め先郵便番号</label>
+                            <p th:text="${form.employerZipCode}"></p>
+
+                            <label class="label2">お勤め先住所</label>
+                            <p th:text="${form.employerAddress}"></p>
+
+                            <label class="label2">お勤め先電話番号</label>
+                            <p th:text="${form.employerPhoneNumber}"></p>
+
+                           <label class="label2">業種</label>
+                           <p th:text="${form.industryType}"></p>
+
+                           <label class="label2">資本金</label>
+                           <p th:text="${form.capital}"></p>
+
+                           <label class="label2">お勤め先の規模（従業員数）</label>
+                           <p th:text="${form.companySize}"></p>
+
+                           <label class="label2">所属部署</label>
+                           <p th:text="${form.department}"></p>
+
+                           <label class="label2">役職</label>
+                           <p th:text="${form.position}"></p>
+
+                            <label class="label2">勤続年数</label>
+                            <p th:text="${form.employeeLength} + '年'"></p>
 
                             <!--/*"ご本人"の入力値を引き回すための隠し項目*/-->
                             <input type="hidden" name="kanjiName_F" th:value="${form.kanjiName_F}"/>
                             <input type="hidden" name="kanjiName_L" th:value="${form.kanjiName_L}"/>
                             <input type="hidden" name="kanaName_F" th:value="${form.kanaName_F}"/>
                             <input type="hidden" name="kanaName_L" th:value="${form.kanaName_L}"/>
-                            <input type="hidden" name="alphabetName_L" th:value="${form.alphabetName_L}"/>
                             <input type="hidden" name="alphabetName_F" th:value="${form.alphabetName_F}"/>
+                            <input type="hidden" name="alphabetName_L" th:value="${form.alphabetName_L}"/>
 
                             <input type="hidden" name="gender" th:value="${form.gender}"/>
                             <input type="hidden" name="dateOfBirth" th:value="${form.dateOfBirth}"/>
@@ -38,19 +109,35 @@
                             <input type="hidden" name="address" th:value="${form.address}"/>
 
                             <input type="hidden" name="homePhoneNumber_1" th:value="${form.homePhoneNumber_1}"/>
-                                <input type="hidden" name="homePhoneNumber_2" th:value="${form.homePhoneNumber_2}"/>
-                                <input type="hidden" name="homePhoneNumber_3" th:value="${form.homePhoneNumber_3}"/>
+                            <input type="hidden" name="homePhoneNumber_2" th:value="${form.homePhoneNumber_2}"/>
+                            <input type="hidden" name="homePhoneNumber_3" th:value="${form.homePhoneNumber_3}"/>
 
                             <input type="hidden" name="mobilePhoneNumber_1" th:value="${form.mobilePhoneNumber_1}"/>
-                                <input type="hidden" name="mobilePhoneNumber_2" th:value="${form.mobilePhoneNumber_2}"/>
-                                <input type="hidden" name="mobilePhoneNumber_3" th:value="${form.mobilePhoneNumber_3}"/>
+                            <input type="hidden" name="mobilePhoneNumber_2" th:value="${form.mobilePhoneNumber_2}"/>
+                            <input type="hidden" name="mobilePhoneNumber_3" th:value="${form.mobilePhoneNumber_3}"/>
 
                             <input type="hidden" name="emailAddress" th:value="${form.emailAddress}"/>
+                            <input type="hidden" name="emailAddress2" th:value="${form.emailAddress2}"/>
+
                             <input type="hidden" name="spouse" th:value="${form.spouse}"/>
                             <input type="hidden" name="houseClassification" th:value="${form.houseClassification}"/>
                             <input type="hidden" name="debt" th:value="${form.debt}"/>
                             <input type="hidden" name="income" th:value="${form.income}"/>
                             <input type="hidden" name="job" th:value="${form.job}"/>
+
+                            <!--/*"job"の入力値を引き回すための隠し項目*/-->
+                            <!--
+                            <input type="hidden" name="employerName" th:value="${form.employerName}"/>
+                            <input type="hidden" name="employerZipCode" th:value="${form.employerZipCode}"/>
+                            <input type="hidden" name="employerAddress" th:value="${form.employerAddress}"/>
+                            <input type="hidden" name="employerPhoneNumber" th:value="${form.employerPhoneNumber}"/>
+                            <input type="hidden" name="industryType" th:value="${form.industryType}"/>
+                            <input type="hidden" name="capital" th:value="${form.capital}"/>
+                            <input type="hidden" name="companySize" th:value="${form.companySize}"/>
+                            <input type="hidden" name="department" th:value="${form.department}"/>
+                            <input type="hidden" name="position" th:value="${form.position}"/>
+                            <input type="hidden" name="number" th:value="${form.number}"/>
+                            -->
 
 
                             <div class="ui column grid">
