--- a/src/main/resources/public/css/main.css
+++ b/src/main/resources/public/css/main.css
@@ -44,6 +44,13 @@ ul.label {
     list-style-type: none;
 }
 
+.label2{
+    font-weight: 600;
+    padding: 10pt;
+    color: #0066CC;
+    font-size: 14px;
+}
+
 .field {
     text-align: left;
 }
